Fix width on OSX firefox causing season label+input wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -281,7 +281,7 @@ span.full{
 
 
 .newSeason label{
-    min-width: 64px;
+    min-width: 60px;
     float: left;
     padding-left: 2px;
 }
